--- a/nginx.conf
+++ b/nginx.conf
@@ -3,4 +3,7 @@ server {
     server_name  service.dynamikosoft.com;
     ssl_certificate /etc/nginx/certs/certificate.crt;
     ssl_certificate_key /etc/nginx/certs/private.key;
+
+    root /usr/share/nginx/html;
+    index login.html;
 }
