--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,9 @@ server {
     ssl_certificate /etc/nginx/certs/certificate.crt;
     ssl_certificate_key /etc/nginx/certs/private.key;
 
+    ssl_certificate /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
     root /usr/share/nginx/html;
     index login.html;
 }
