--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,14 @@
 server {
-    listen 443 ssl;
-    server_name  service.dynamikosoft.com;
+	listen 8888 default_server;
+	listen [::]:8888 default_server;
 
-    ssl_certificate /etc/nginx/certs/cert.pem;
-    ssl_certificate_key /etc/nginx/certs/key.pem;
+	root /var/www/html;
 
-    root /usr/share/nginx/html;
-    index login.html;
+	index index.html index.htm index.nginx-debian.html;
+
+	server_name _;
+
+	location / {
+		try_files $uri $uri/ =404;
+	}
 }
