--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,11 @@
 server {
-	listen 8888 default_server;
-	listen [::]:8888 default_server;
-
-	root /var/www/html;
-
-	index index.html index.htm index.nginx-debian.html;
-
-	server_name _;
-
-	location / {
-		try_files $uri $uri/ =404;
-	}
+    listen 7777 ssl;
+    server_name  localhost;
+    ssl_certificate /etc/nginx/certs/certificate.crt;
+    ssl_certificate_key /etc/nginx/certs/private.key;
+    location / {
+        root   /usr/share/nginx/html;
+        index  login.html index.htm;
+        error_log /var/log/dynamiko.log;
+    }
 }
