--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -8,5 +8,19 @@ server {
         root   /usr/share/nginx/html;
         index  login.html index.htm;
         error_log /var/log/dynamiko.log;
+
+
+        # Simple requests
+        if ($request_method ~* "(GET|POST)") {
+            add_header "Access-Control-Allow-Origin"  *;
+        }
+
+        # Preflighted requests
+        if ($request_method = OPTIONS ) {
+            add_header "Access-Control-Allow-Origin"  *;
+            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
+            add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
+            return 200;
+        }
     }
 }
