--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 7777 ssl;
     listen [::]:7777 ssl;
     server_name  localhost;
-    ssl_certificate /etc/nginx/self-certs/certificate.crt;
-    ssl_certificate_key /etc/nginx/self-certs/private.key;
+    ssl_certificate /etc/nginx/self-certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/self-certs/privkey.pem;
     location / {
         root   /usr/share/nginx/html;
         index  login.html index.htm;
