--- a/conf.d/docker-nginx.conf
+++ b/conf.d/docker-nginx.conf
@@ -1,8 +1,10 @@
 server {
-    listen 7777 ssl;
+    # listen 7777 ssl;
+    # server_name  localhost;
+    # ssl_certificate /etc/nginx/certs/fullchain.pem;
+    # ssl_certificate_key /etc/nginx/certs/privkey.pem;
+    listen 80;
     server_name  localhost;
-    ssl_certificate /etc/nginx/certs/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/privkey.pem;
     location / {
         root   /usr/share/nginx/html;
         index  login.html index.htm;
