--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name  localhost;
+    server_name  dynamikosoft.com;
     # listen 7777 ssl;
     # listen [::]:7777 ssl;
     # server_name  localhost;
