--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -1,16 +1,13 @@
 server {
-    listen 80;
+    # listen 80;
+    listen 443 ssl;
     server_name  dynamikosoft.com;
-    # listen 7777 ssl;
-    # listen [::]:7777 ssl;
-    # server_name  localhost;
-    # ssl_certificate /etc/nginx/self-certs/fullchain.pem;
-    # ssl_certificate_key /etc/nginx/self-certs/privkey.pem;
+    ssl_certificate /etc/nginx/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/privkey.pem;
     location / {
         root   /usr/share/nginx/html;
         index  login.html index.htm;
         error_log /var/log/dynamiko.log;
-
 
         # Simple requests
         if ($request_method ~* "(GET|POST)") {
